--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
         </div>
       </div>
     </nav>
-    <h1 class="text-center">About me</h1>
+    <h1 class="text-center name">About me</h1>
     <h3 class="text-center">Front-end developer from Glasgow, UK</h3>
     <div class="about-paragraphs">
       <p class="text-center">
