--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         </div>
       </div>
     </nav>
-    <h2 class="text-center">👋 Hi I am</h2>
-    <h1 class="text-center">Nicole Gainska</h1>
+    <h2 class="name text-center">👋 Hi I am</h2>
+    <h1 class="name text-center">Nicole Gainska</h1>
     <h3 class="text-center">🐱‍💻 Front-end developer, based in Glasgow, UK</h3>
     <div class="navigation-links mb-5">
       <a href="about.html#contact" class="contact-link">Contact me</a>
@@ -55,7 +55,7 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col-sm-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+          <img src="images/yoga.png" class="img-fluid rounded main" />
         </div>
         <div class="col-sm-6">
             <h2 class="mb-3">Yoga app</h2>
@@ -74,12 +74,12 @@
                 </div>
             </div>
         <div class="col-sm-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+          <img src="images/weather.png" class="img-fluid rounded main" />
         </div>
       </div>
       <div class="row mb-5">
           <div class="col-sm-6">
-              <img src="images/yogurt.png" class="img-fluid rounded" />
+              <img src="images/yogurt.png" class="img-fluid rounded main" />
           </div>
         <div class="col-sm-6">
             <h2 class="mb-3">Yogurt app</h2>
