--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+      content="About Nicole Gainska - a front-end developer based in Glasgow, UK">
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
@@ -16,7 +18,7 @@
       integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
       crossorigin="anonymous"
     ></script>
-    <title>About Nicole Gainska</title>
+    <title>About me - Nicole Gainska</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -58,13 +60,13 @@
     <div class="container mb-5">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid rounded p-2 shadow" />
+          <img src="images/yoga.png" class="img-fluid rounded p-2 shadow" alt="Yoga Project" />
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid rounded p-2 shadow" />
+          <img src="images/weather.png" class="img-fluid rounded p-2 shadow"alt="Weather Project" />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid rounded p-2 shadow" />
+          <img src="images/yogurt.png" class="img-fluid rounded p-2 shadow" alt="Yogurt Project"/>
         </div>
       </div>
     </div>
