--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nicole Gainska</title>
+    <meta name="description"
+      content="Nicole Gainska is a front-end developer based in Glasgow, check out her projects and contact her for job inquiries">
+    <title>Front-end Developer - Nicole Gainska</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
@@ -38,8 +40,8 @@
             <a class="nav-link active" aria-current="page" href="index.html"
               >Home</a
             >
-            <a class="nav-link" href="about.html">About me</a>
-            <a class="nav-link" href="about.html#contact">Contact me</a>
+            <a class="nav-link" href="about.html" >About me</a>
+            <a class="nav-link" href="about.html#contact" >Contact me</a>
           </div>
         </div>
       </div>
@@ -48,20 +50,20 @@
     <h1 class="name text-center">Nicole Gainska</h1>
     <h3 class="text-center">🐱‍💻 Front-end developer, based in Glasgow, UK</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+      <a href="about.html#contact" class="contact-link" title="Contact Nicole">Contact me</a>
+      <a href="about.html" class="about-link" title="About Nicole">About me</a>
     </div>
 
     <div class="container">
       <div class="row mb-5">
         <div class="col-sm-6">
-          <img src="images/yoga.png" class="img-fluid rounded main" />
+          <img src="images/yoga.png" class="img-fluid rounded main" alt="Yoga Project"/>
         </div>
         <div class="col-sm-6">
             <h2 class="mb-3">Yoga app</h2>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</p>
             <div class="navgrid-links">
-                <a href="#" class="grid-link">Launch Yoga App</a>
+                <a href="#" class="grid-link" title="Yoga Project">Launch Yoga App</a>
               </div>
           </div>
       </div>
@@ -70,22 +72,22 @@
               <h2 class="mb-3">Weather app</h2>
               <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</p>
               <div class="navgrid-links">
-                  <a href="#" class="grid-link">Launch Weather App</a>
+                  <a href="#" class="grid-link" title="Weather Project">Launch Weather App</a>
                 </div>
             </div>
         <div class="col-sm-6">
-          <img src="images/weather.png" class="img-fluid rounded main" />
+          <img src="images/weather.png" class="img-fluid rounded main" alt="Weather Project"/>
         </div>
       </div>
       <div class="row mb-5">
           <div class="col-sm-6">
-              <img src="images/yogurt.png" class="img-fluid rounded main" />
+              <img src="images/yogurt.png" class="img-fluid rounded main" alt="Yogurt Project"/>
           </div>
         <div class="col-sm-6">
             <h2 class="mb-3">Yogurt app</h2>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</p>
             <div class="navgrid-links">
-                <a href="#" class="grid-link">Launch Yogurt App</a>
+                <a href="#" class="grid-link" title="Yogurt Project">Launch Yogurt App</a>
               </div>
           </div>
       </div>
